--- a/p1/src/main/java/info/yinhua/web/action/BaseAction_zh_CN.properties
+++ b/p1/src/main/java/info/yinhua/web/action/BaseAction_zh_CN.properties
@@ -11,6 +11,6 @@ password = \u5bc6\u7801
 
 #button
 login = \u767b\u5f55
-logoff = \u9000\u51fa
+logout = \u9000\u51fa
 search = \u68c0\u7d22
 transform = \u8f6c\u6362
