--- a/p1/src/main/java/info/yinhua/web/action/BaseAction_zh_CN.properties
+++ b/p1/src/main/java/info/yinhua/web/action/BaseAction_zh_CN.properties
@@ -1,6 +1,8 @@
 #sytem
-title = XXX\u7cfb\u7edf
-
+app.nm = XXX\u7ba1\u7406\u7cfb\u7edf
+statement.copyright = &copy; 2015 \u67d0\u67d0\u516c\u53f8\uff0c\u4fdd\u7559\u6240\u6709\u6743\u5229\u3002
+top.go = \u8fd4\u56de\u9876\u90e8
+placeholder.search = \u641c\u7d22...
 homepage = \u4e3b\u9875
 about = \u5173\u4e8e
 contact = \u8054\u7cfb
@@ -14,3 +16,18 @@ login = \u767b\u5f55
 logout = \u9000\u51fa
 search = \u68c0\u7d22
 transform = \u8f6c\u6362
+clear = \u6e05\u7a7a
+create = \u65b0\u5efa
+
+#user
+info.upate = \u4fee\u6539\u4fe1\u606f
+password.change = \u4fee\u6539\u5bc6\u7801
+user.manager = \u7528\u6237\u7ba1\u7406
+authority.manager = \u6743\u9650\u7ba1\u7406
+
+list.info = \u4fe1\u606f\u4e00\u89c8
+cd = \u7f16\u53f7
+name = \u59d3\u540d
+gender = \u6027\u522b
+department = \u90e8\u95e8
+status.login = \u767b\u5f55\u72b6\u6001
