--- a/p1/src/main/java/info/yinhua/web/action/BaseAction_zh_CN.properties
+++ b/p1/src/main/java/info/yinhua/web/action/BaseAction_zh_CN.properties
@@ -9,9 +9,11 @@ contact = \u8054\u7cfb
 
 #label
 mail = \u90ae\u7bb1
-password = \u5bc6\u7801
 
 #button
+username = \u7528\u6237\u540d
+password = \u5bc6\u7801
+remember = \u4e24\u5468\u5185\u81ea\u52a8\u767b\u5f55
 login = \u767b\u5f55
 logout = \u9000\u51fa
 search = \u68c0\u7d22
