--- a/p1/src/main/resources/message_zh_CN.properties
+++ b/p1/src/main/resources/message_zh_CN.properties
@@ -1,4 +1,5 @@
 #https://marketplace.eclipse.org/content/properties-editor
 #http://propedit.sourceforge.jp/eclipse/updates/
-ME001q = \u9519\u8bef\uff01
-\u5927\u98ce\u5927\u6d6a
+ME-LOGIN-001 = \u8ba4\u8bc1\u5931\u8d25\uff0c\u8bf7\u91cd\u65b0\u8f93\u5165\uff01
+ME-LOGIN-002 = \u7528\u6237\u65e0\u6548\uff01
+ME-LOGIN-003 = \u6743\u9650\u4e0d\u8db3\uff01
