--- a/p1/src/main/resources/global_zh_CN.properties
+++ b/p1/src/main/resources/global_zh_CN.properties
@@ -9,4 +9,4 @@ contact = \u8054\u7cfb
 
 #error
 error.page = \u62a5\u9519\u9875\u9762
-error.cd = \u9519\u8bef\u7f16\u53f7\uff1a 
+error.cd = \u9519\u8bef\u7f16\u53f7
