--- a/p1/src/main/resources/message_zh_CN.properties
+++ b/p1/src/main/resources/message_zh_CN.properties
@@ -3,3 +3,10 @@
 ME-LOGIN-001 = \u8ba4\u8bc1\u5931\u8d25\uff0c\u8bf7\u91cd\u65b0\u8f93\u5165\uff01
 ME-LOGIN-002 = \u7528\u6237\u65e0\u6548\uff01
 ME-LOGIN-003 = \u6743\u9650\u4e0d\u8db3\uff01
+ME-INPUT-001 = {0}\u4e0d\u53ef\u4e3a\u7a7a\uff01
+ME-INPUT-002 = {0}\u8bf7\u8f93\u5165\u82f1\u6587\u6216\u6570\u5b57\uff01
+ME-INPUT-003 = {0}\u7684\u4f4d\u6570\u5fc5\u987b\u5c0f\u4e8e{2}\uff01
+ME-INPUT-004 = {0}\u7684\u4e24\u6b21\u8f93\u5165\u5fc5\u987b\u4e00\u81f4\uff01
+
+MW-SIGNUP-001 = \u8b66\u544a\uff1a\uff01
+MI-SIGNUP-001 = {0}\u6ce8\u518c\u6210\u529f\uff01
