--- a/p1/src/main/resources/info/yinhua/web/action/BaseAction_zh_CN.properties
+++ b/p1/src/main/resources/info/yinhua/web/action/BaseAction_zh_CN.properties
@@ -9,6 +9,7 @@ password = \u5bc6\u7801
 remember = \u4e24\u5468\u5185\u81ea\u52a8\u767b\u5f55
 login = \u767b\u5f55
 logout = \u9000\u51fa
+register = \u6ce8\u518c
 search = \u68c0\u7d22
 transform = \u8f6c\u6362
 clear = \u6e05\u7a7a
