--- a/p1/src/main/resources/info/yinhua/web/action/BaseAction_zh_CN.properties
+++ b/p1/src/main/resources/info/yinhua/web/action/BaseAction_zh_CN.properties
@@ -14,6 +14,7 @@ search = \u68c0\u7d22
 transform = \u8f6c\u6362
 clear = \u6e05\u7a7a
 create = \u65b0\u5efa
+edit = \u7f16\u8f91
 
 #user
 info.upate = \u4fee\u6539\u4fe1\u606f
@@ -26,4 +27,5 @@ cd = \u7f16\u53f7
 name = \u59d3\u540d
 gender = \u6027\u522b
 department = \u90e8\u95e8
-status.login = \u767b\u5f55\u72b6\u6001
+#status.login = \u767b\u5f55\u72b6\u6001
+user.enabled = \u53ef\u7528\u72b6\u6001
