--- a/p1/src/main/resources/info/yinhua/web/action/BaseAction_zh_CN.properties
+++ b/p1/src/main/resources/info/yinhua/web/action/BaseAction_zh_CN.properties
@@ -15,8 +15,10 @@ transform = \u8f6c\u6362
 clear = \u6e05\u7a7a
 create = \u65b0\u5efa
 edit = \u7f16\u8f91
+ok = \u786e\u5b9a
 
 #user
+message = \u6d88\u606f
 info.upate = \u4fee\u6539\u4fe1\u606f
 password.change = \u4fee\u6539\u5bc6\u7801
 user.manager = \u7528\u6237\u7ba1\u7406
