--- a/p1/src/main/resources/message_zh_CN.properties
+++ b/p1/src/main/resources/message_zh_CN.properties
@@ -10,4 +10,7 @@ ME-INPUT-003 = {0}\u7684\u4f4d\u6570\u5fc5\u987b\u5c0f\u4e8e{2}\uff01
 ME-INPUT-004 = {0}\u7684\u4e24\u6b21\u8f93\u5165\u5fc5\u987b\u4e00\u81f4\uff01
 
 MW-SIGNUP-001 = \u8b66\u544a\uff1a\uff01
+
 MI-SIGNUP-001 = {0}\u6ce8\u518c\u6210\u529f\uff01
+MI-USER-001 = \u7528\u6237{0}\u4fe1\u606f\u4fee\u6539\u6210\u529f\uff01
+MI-USER-002 = \u7528\u6237{0}\u5bc6\u7801\u4fee\u6539\u6210\u529f\uff01
