--- a/p1/src/main/resources/info/yinhua/web/action/UserAction_zh_CN.properties
+++ b/p1/src/main/resources/info/yinhua/web/action/UserAction_zh_CN.properties
@@ -1,5 +1,7 @@
 title = \u5458\u5de5\u4fe1\u606f
 
+user.password.origin = \u539f\u59cb\u5bc6\u7801
+user.password.new = \u65b0\u8bbe\u5bc6\u7801
 user.password2 = \u786e\u8ba4\u5bc6\u7801
 user.enabled = \u53ef\u7528\u72b6\u6001
 user.idNumber = \u8bc1\u4ef6\u53f7\u7801
@@ -9,6 +11,7 @@ user.gender = \u6027\u522b
 user.department = \u90e8\u95e8
 user.comment = \u7528\u6237\u8bf4\u660e
 
+tab.info = \u4fe1\u606f
 tab.show = \u663e\u793a
 tab.update = \u4fee\u6539
 tab.changePassword = \u4fee\u6539\u5bc6\u7801
