--- a/p1/src/main/resources/info/yinhua/web/action/BaseAction_zh_CN.properties
+++ b/p1/src/main/resources/info/yinhua/web/action/BaseAction_zh_CN.properties
@@ -13,6 +13,8 @@ register = \u6ce8\u518c
 search = \u68c0\u7d22
 transform = \u8f6c\u6362
 clear = \u6e05\u7a7a
+reset = \u590d\u539f
+back = \u8fd4\u56de
 create = \u65b0\u5efa
 edit = \u7f16\u8f91
 ok = \u786e\u5b9a
