--- a/p1/src/main/resources/message_zh_CN.properties
+++ b/p1/src/main/resources/message_zh_CN.properties
@@ -4,6 +4,7 @@ ME-LOGIN-001 = \u8ba4\u8bc1\u5931\u8d25\uff0c\u8bf7\u91cd\u65b0\u8f93\u5165\uff0
 ME-LOGIN-002 = \u7528\u6237\u65e0\u6548\uff01
 ME-LOGIN-003 = \u6743\u9650\u4e0d\u8db3\uff01
 ME-LOGIN-004 = \u8d85\u51fa\u540c\u65f6\u6700\u5927\u767b\u5f55\u6570\u91cf\uff01
+ME-LOGIN-011 = \u7528\u6237\u4fe1\u606f\u5df2\u66f4\u65b0\uff0c\u8bf7\u91cd\u65b0\u767b\u5f55\uff01
 ME-INPUT-001 = {0}\u4e0d\u53ef\u4e3a\u7a7a\uff01
 ME-INPUT-002 = {0}\u8bf7\u8f93\u5165\u82f1\u6587\u6216\u6570\u5b57\uff01
 ME-INPUT-003 = {0}\u7684\u4f4d\u6570\u5fc5\u987b\u5c0f\u4e8e{2}\uff01
