--- a/p1/src/main/resources/info/yinhua/web/action/BaseAction_zh_CN.properties
+++ b/p1/src/main/resources/info/yinhua/web/action/BaseAction_zh_CN.properties
@@ -15,9 +15,10 @@ transform = \u8f6c\u6362
 clear = \u6e05\u7a7a
 reset = \u590d\u539f
 back = \u8fd4\u56de
+ok = \u786e\u5b9a
 create = \u65b0\u5efa
 edit = \u7f16\u8f91
-ok = \u786e\u5b9a
+remove = \u5220\u9664
 
 #user
 message = \u6d88\u606f
