--- a/p1/src/main/resources/info/yinhua/web/action/user/package_zh_CN.properties
+++ b/p1/src/main/resources/info/yinhua/web/action/user/package_zh_CN.properties
@@ -17,3 +17,6 @@ tab.changePassword = \u4fee\u6539\u5bc6\u7801
 user.info = \u7528\u6237\u4fe1\u606f
 placeholder.user.code = G0001
 placeholder.user.name = \u738b\u7ea2
+
+user.remove = \u7528\u6237\u5220\u9664
+user.edit = \u7528\u6237\u7f16\u8f91
