--- a/p1/src/main/resources/message_zh_CN.properties
+++ b/p1/src/main/resources/message_zh_CN.properties
@@ -15,3 +15,8 @@ MW-SIGNUP-001 = \u8b66\u544a\uff1a\uff01
 MI-SIGNUP-001 = {0}\u6ce8\u518c\u6210\u529f\uff01
 MI-USER-001 = \u7528\u6237{0}\u4fe1\u606f\u4fee\u6539\u6210\u529f\uff01
 MI-USER-002 = \u7528\u6237{0}\u5bc6\u7801\u4fee\u6539\u6210\u529f\uff01
+MI-USER-003 = \u7528\u6237{0}\u5220\u9664\u6210\u529f\uff01
+MI-SESSION-001 = \u672c\u6b21\u4f1a\u8bdd\u5df2\u7ed3\u675f\uff0c\u8bf7\u91cd\u65b0\u767b\u5f55\uff01
+
+MC-USER-001 = \u786e\u5b9a\u8981\u5220\u9664\u7528\u6237{0}\u5417\uff1f
+MC-USER-002 = \u786e\u5b9a\u8981\u4fee\u6539\u7528\u6237{0}\u4fe1\u606f\u5417\uff1f
