--- a/p1/src/main/resources/message_zh_CN.properties
+++ b/p1/src/main/resources/message_zh_CN.properties
@@ -10,6 +10,12 @@ ME-INPUT-002 = {0}\u8bf7\u8f93\u5165\u82f1\u6587\u6216\u6570\u5b57\uff01
 ME-INPUT-003 = {0}\u7684\u4f4d\u6570\u5fc5\u987b\u5c0f\u4e8e{2}\uff01
 ME-INPUT-004 = {0}\u7684\u4e24\u6b21\u8f93\u5165\u5fc5\u987b\u4e00\u81f4\uff01
 
+ME-USER-001 = \u8be5\u7528\u6237\u4fe1\u606f\u5df2\u66f4\u65b0\uff0c\u8bf7\u91cd\u65b0\u786e\u8ba4\u540e\u64cd\u4f5c\u3002
+ME-USER-002 = \u8be5\u7528\u6237\u4fe1\u606f\u5df2\u4e0d\u5b58\u5728\uff0c\u8bf7\u91cd\u65b0\u786e\u8ba4\u540e\u64cd\u4f5c\u3002
+ME-SIGNUP-001 = \u8be5\u7528\u6237\u5df2\u5b58\u5728\uff0c\u8bf7\u66f4\u6362\u7528\u6237\u540d\u3002
+
+ME-BACK-001 = \u540e\u53f0\u64cd\u4f5c\u5931\u8d25\u3002
+
 MW-SIGNUP-001 = \u8b66\u544a\uff1a\uff01
 
 MI-SIGNUP-001 = {0}\u6ce8\u518c\u6210\u529f\uff01
@@ -18,5 +24,5 @@ MI-USER-002 = \u7528\u6237{0}\u5bc6\u7801\u4fee\u6539\u6210\u529f\uff01
 MI-USER-003 = \u7528\u6237{0}\u5220\u9664\u6210\u529f\uff01
 MI-SESSION-001 = \u672c\u6b21\u4f1a\u8bdd\u5df2\u7ed3\u675f\uff0c\u8bf7\u91cd\u65b0\u767b\u5f55\uff01
 
-MC-USER-001 = \u786e\u5b9a\u8981\u5220\u9664\u7528\u6237{0}\u5417\uff1f
+MC-USER-001 = \u786e\u5b9a\u8981\u5220\u9664\u8be5\u7528\u6237\u5417\uff1f
 MC-USER-002 = \u786e\u5b9a\u8981\u4fee\u6539\u7528\u6237{0}\u4fe1\u606f\u5417\uff1f
