--- a/p1/src/main/resources/info/yinhua/web/action/BaseAction_zh_CN.properties
+++ b/p1/src/main/resources/info/yinhua/web/action/BaseAction_zh_CN.properties
@@ -19,6 +19,7 @@ ok = \u786e\u5b9a
 create = \u65b0\u5efa
 edit = \u7f16\u8f91
 remove = \u5220\u9664
+brower.notification = \u6d4f\u89c8\u5668\u901a\u77e5\u8bbe\u5b9a
 
 #user
 message = \u6d88\u606f
