--- a/p1/src/main/resources/message_zh_CN.properties
+++ b/p1/src/main/resources/message_zh_CN.properties
@@ -3,7 +3,7 @@
 ME-LOGIN-001 = \u8ba4\u8bc1\u5931\u8d25\uff0c\u8bf7\u91cd\u65b0\u8f93\u5165\uff01
 ME-LOGIN-002 = \u7528\u6237\u65e0\u6548\uff01
 ME-LOGIN-003 = \u6743\u9650\u4e0d\u8db3\uff01
-ME-LOGIN-004 = \u8d85\u51fa\u540c\u65f6\u6700\u5927\u767b\u5f55\u6570\u91cf\uff01
+ME-LOGIN-004 = \u8d85\u51fa\u6700\u5927\u540c\u65f6\u767b\u5f55\u6570\u91cf\uff01
 ME-LOGIN-011 = \u7528\u6237\u4fe1\u606f\u5df2\u66f4\u65b0\uff0c\u8bf7\u91cd\u65b0\u767b\u5f55\uff01
 ME-INPUT-001 = {0}\u4e0d\u53ef\u4e3a\u7a7a\uff01
 ME-INPUT-002 = {0}\u8bf7\u8f93\u5165\u82f1\u6587\u6216\u6570\u5b57\uff01
@@ -16,7 +16,7 @@ ME-SIGNUP-001 = \u8be5\u7528\u6237\u5df2\u5b58\u5728\uff0c\u8bf7\u66f4\u6362\u75
 
 ME-BACK-001 = \u540e\u53f0\u64cd\u4f5c\u5931\u8d25\u3002
 
-MW-SIGNUP-001 = \u8b66\u544a\uff1a\uff01
+MW-USER-001 = \u8be5\u7528\u6237\u5728\u767b\u5f55\u4e2d\uff0c\u786e\u5b9a\u8981\u5220\u9664\u8be5\u7528\u6237\u5417\uff1f
 
 MI-SIGNUP-001 = {0}\u6ce8\u518c\u6210\u529f\uff01
 MI-USER-001 = \u7528\u6237{0}\u4fe1\u606f\u4fee\u6539\u6210\u529f\uff01
