--- a/p1/src/main/resources/message_zh_CN.properties
+++ b/p1/src/main/resources/message_zh_CN.properties
@@ -17,6 +17,7 @@ ME-SIGNUP-001 = \u8be5\u7528\u6237\u5df2\u5b58\u5728\uff0c\u8bf7\u66f4\u6362\u75
 ME-BACK-001 = \u540e\u53f0\u64cd\u4f5c\u5931\u8d25\u3002
 
 MW-USER-001 = \u8be5\u7528\u6237\u5728\u767b\u5f55\u4e2d\uff0c\u786e\u5b9a\u8981\u5220\u9664\u8be5\u7528\u6237\u5417\uff1f
+MW-USER-002 = \u7528\u6237{0}\u767b\u5f55\uff01
 
 MI-SIGNUP-001 = {0}\u6ce8\u518c\u6210\u529f\uff01
 MI-USER-001 = \u7528\u6237{0}\u4fe1\u606f\u4fee\u6539\u6210\u529f\uff01
