--- a/p1/src/main/resources/info/yinhua/web/action/user/package_zh_CN.properties
+++ b/p1/src/main/resources/info/yinhua/web/action/user/package_zh_CN.properties
@@ -23,3 +23,5 @@ user.edit = \u7528\u6237\u7f16\u8f91
 
 notification.title = \u6765\u81ea\u7f51\u7ad9\u7684\u901a\u77e5\uff1a
 notification.msg = \u901a\u77e5\u529f\u80fd\u6b63\u5e38\u3002
+
+user.homepage = \u7528\u6237\u4e3b\u9875
