--- a/p1/src/main/resources/info/yinhua/web/action/package_zh_CN.properties
+++ b/p1/src/main/resources/info/yinhua/web/action/package_zh_CN.properties
@@ -3,3 +3,6 @@ manager = \u7ba1\u7406
 
 user.code = \u7528\u6237\u7f16\u53f7
 user.name = \u59d3\u540d
+user.gender = \u6027\u522b
+user.department = \u90e8\u95e8
+user.comment = \u7528\u6237\u8bf4\u660e
