--- a/p1/src/main/resources/info/yinhua/web/action/package_zh_CN.properties
+++ b/p1/src/main/resources/info/yinhua/web/action/package_zh_CN.properties
@@ -6,3 +6,7 @@ user.name = \u59d3\u540d
 user.gender = \u6027\u522b
 user.department = \u90e8\u95e8
 user.comment = \u7528\u6237\u8bf4\u660e
+
+user.remove = \u7528\u6237\u5220\u9664
+user.edit = \u7528\u6237\u7f16\u8f91
+user.homepage = \u7528\u6237\u4e3b\u9875
