--- a/p1/src/main/resources/info/yinhua/web/action/user/package_zh_CN.properties
+++ b/p1/src/main/resources/info/yinhua/web/action/user/package_zh_CN.properties
@@ -13,6 +13,7 @@ user.info = \u7528\u6237\u4fe1\u606f
 placeholder.user.code = G0001
 placeholder.user.name = \u738b\u7ea2
 
+user.setting = \u7528\u6237\u8bbe\u5b9a
 
 notification.title = \u6765\u81ea\u7f51\u7ad9\u7684\u901a\u77e5\uff1a
 notification.msg = \u901a\u77e5\u529f\u80fd\u6b63\u5e38\u3002
