authority, log, message, etc

--- a/p1/src/main/resources/message_zh_CN.properties
+++ b/p1/src/main/resources/message_zh_CN.properties
@@ -28,3 +28,4 @@ MI-USER-003 = \u7528\u6237{0}\u5220\u9664\u6210\u529f\uff01
 
 MC-USER-001 = \u786e\u5b9a\u8981\u5220\u9664\u8be5\u7528\u6237\u5417\uff1f
 MC-USER-002 = \u786e\u5b9a\u8981\u4fee\u6539\u7528\u6237{0}\u4fe1\u606f\u5417\uff1f
+MC-AUTHORITY-001 = \u786e\u5b9a\u8981\u4fee\u6539\u8fd9\u4e9b\u7528\u6237\u6743\u9650\u5417?
