--- a/p1/src/main/resources/info/yinhua/web/action/hr/package_zh_CN.properties
+++ b/p1/src/main/resources/info/yinhua/web/action/hr/package_zh_CN.properties
@@ -1,3 +1,3 @@
 user.filter = \u7528\u6237\u540d\u7b5b\u9009
 user.objs = \u5bf9\u8c61\u7528\u6237\uff1a
-authority.op = \u6743\u9650\u64cd\u4f5c\uff1a
+authority.op = \u6743\u9650\u64cd\u4f5c
