--- a/p1/src/main/resources/message_zh_CN.properties
+++ b/p1/src/main/resources/message_zh_CN.properties
@@ -25,6 +25,7 @@ MI-SIGNUP-001 = {0}\u6ce8\u518c\u6210\u529f\uff01
 MI-USER-001 = \u7528\u6237{0}\u4fe1\u606f\u4fee\u6539\u6210\u529f\uff01
 MI-USER-002 = \u7528\u6237{0}\u5bc6\u7801\u4fee\u6539\u6210\u529f\uff01
 MI-USER-003 = \u7528\u6237{0}\u5220\u9664\u6210\u529f\uff01
+MI-USER-004 = \u7528\u6237\u4fe1\u606f\u6ca1\u6709\u6539\u52a8, \u4e0d\u7528\u4fee\u6539!
 
 MC-USER-001 = \u786e\u5b9a\u8981\u5220\u9664\u8be5\u7528\u6237\u5417\uff1f
 MC-USER-002 = \u786e\u5b9a\u8981\u4fee\u6539\u7528\u6237{0}\u4fe1\u606f\u5417\uff1f
